--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="portofolio_v1">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>portofolio_v1</title>
+  <title>My Portofolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -31,7 +31,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '813344126';
+    var serviceWorkerVersion = '3624517734';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
