--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <title>portofolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body>
+<body style="background-color: black;">
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
